# parlparse

./: .gitignore  CNAME  Dockerfile  LICENSE.md  LICENSE.txt  README.md  _config.yml  filtersentence_xml.py  get-historic-debates  get-historic-person-urls  hansard.md  index.md  members.md  parser.md  pyproject.toml  requirements.dev.txt  requirements.txt
.devcontainer/: devcontainer.json
_includes/: footer.html  header.html
_layouts/: default.html  page.html
custom/: edm2xml.pl  edmid_to_pwid.pl
london-mayors-questions/: .gitignore  README.md  config.json  pyproject.toml  questions.py
members/: all-lords-extras.xml  all-lords.xml  all-members-2010.xml  all-members.xml  allmembermunge.py  bbc-constituency-ids.xml  bbc-links.xml  bbcconv.py  constituencies.json  constituencies.xml  constituency-links.xml  diocese-bishops.py  diocese-bishops.xml  edm-links.xml  edmconv.py  eu_ref_positions.json  expenses.py  expenses2005.py  expenses2006.py  expenses2007.py  expenses200708.xml  expenses2008.py  expenses200809.xml  expenses2009.py  genlordsfromraw.py  genwamembers.py  guardian-links.xml  guardian-people.tsv  guardianconv.py  guardianfetch.py  guardiantotsv.py  journa-list-scrape.py  journa-list.xml  lordaliases.xml  lordnametoofname.xml  member-aliases.xml  ministers-2010-source  ministers-2010.json  ministers-2010.xml  ministers-make-xml  (+37 more)
pyscraper/: .gitignore  base_resolver.py  clsinglespeech.py  contextexception.py  createhansardindex.py  extractofficialreportlinks.py  filtersentence.py  find_dupes.py  get_links_from_ep.py  gettwittermps.py  gidmatching.py  lazyrunall.py  miscfuncs.py  new_hansard.py  parlphrases.py  patchfilter.py  patchtool.py  process_hansard.py  pullgluepages.py  regmemfilter.py  regmempullgluepages.py  reparse.py  resolvemembernames.py  runfilters.py  scrape_recess_dates.py  settings.py  splitheadingsspeakers.py  test.py  unpack_hansard_zips.py  xmlfilewrite.py
pyscraper/future/: TTD  (+5 more)
rawdata/: MPs_standing_down_in_2010  Members_of_the_2nd_Scottish_Parliament  Members_of_the_3rd_Scottish_Parliament  Members_of_the_4th_Scottish_Parliament  Members_of_the_House_of_Commons  Members_of_the_House_of_Commons_1997  Members_of_the_House_of_Commons_2001  Members_of_the_House_of_Commons_2005  Members_of_the_House_of_Commons_2010  Members_of_the_House_of_Lords  Members_of_the_NIA_2007  Members_of_the_NIA_2011  Next_United_Kingdom_general_election  eu_ref_positions.json  mpsexpenses200809.csv  mpsexpenses200809.txt  sp_minister_data.json  sp_minister_type.json  sp_msps.json  websites.tsv  wtt-constituencies.txt
script/: lint
scripts/: .gitignore  2021-lam-update  2021-msp-update  add-new-lords  add-new-mlas  add_scottish_ids.py  changewatcher  check-membership-counts  consts  crawl-datadotparl-members  crontab  dailyupdate  dataupdate  divisionextractor.pl  fetch-mp-eu-ref-positions  fetch-pw-json  fetch_london_assembly.py  fetch_scottish_ministers.py  fetch_wikidata_from_everypolitician.py  info-tasks  json-add-membership  json-add-new-parl-ids  json-add-person  json-body-end  json-change-party  json-edit-person  json-end-membership  json-merge-people  json-msp-2021-end  json-new-ids  json-nia-2017-end  json-nia-2017-new  json-nia-2022-new  json-wmc-2017-end  lords2012special.py  lordsonlytest  lordsupdatedaterange  lordsupdatedaterange-parse  lordsupdatedaterange-scrape  morningupdate  (+10 more)
website/: index.html  rest.cgi
wrans-2014/: parse.py  requirements.txt
(+3705 files in other folders)
